add collection tag

--- a/api/article/models/article.settings.json
+++ b/api/article/models/article.settings.json
@@ -48,6 +48,10 @@
     "author": {
       "via": "articles",
       "model": "writer"
+    },
+    "tag": {
+      "via": "articles",
+      "model": "tag"
     }
   }
 }
